--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "firebase": "^9.7.0",
     "react": "^18.0.0",
